# mors

./: .clang-format  .gitignore  CMakeLists.txt  build_models.sh  conanfile.txt  installation.md  mors.cpp  mors_emitter.py  mors_lib.py  readme.md  requirements.txt  setup_project.sh  uninstall.sh
cli/: cumulative.mzn  meson.build
cli/main/: main.cpp
cli/subprojects/: mors-frontend
emitter/: __init__.py  mors_lib.py
ir/: CMakeLists.txt  ir.cpp  ir.hpp
models/allinterval/: allinterval.mzn  allinterval.py
models/allinterval2/: allinterval2.mzn  allinterval2.py
models/assign/: assign.py
models/assign_dual/: assign_dual.py
models/assign_inverse/: assign_inverse.py
models/aust/: aust.mzn  aust.py
models/cell_block/: cell_block.py
models/cluster/: cluster.py
models/compatible_assignment/: compatible_assignment.py
models/cumulative/: m_cumulative.mzn
models/doublechannel/: doublechannel.py
models/jobshop/: jobshop.py
models/jobshop2/: jobshop2.mzn  jobshop2.py
models/jobshop3/: jobshop3.py
models/knapsack/: knapsack.py
models/langford/: langford.mzn  langford.py
models/langfordinverse/: langfordinverse.mzn  langfordinverse.py
models/langfordinverse_reif/: langfordinverse_reif.mzn  langfordinverse_reif.py
models/laplace/: laplace.mzn
models/ltsp/: ltsp.dzn  ltsp.mzn  ltsp.py
models/manhattan/: manhattan.mzn  manhattan.py
models/meal/: meal.dzn  meal.mzn  meal.py
models/moving/: moving.py
models/nurses/: nurses.py
models/photo/: photo.dzn  photo.mzn  photo.py
models/prod-planning/: prod-planning.mzn  prod-planning.py
models/project_scheduling/: project_scheduling.py
models/queens/: queens.mzn  queens.py
models/queens_reif/: queens_reif.mzn  queens_reif.py
models/rcpsp/: rcpsp.dzn  rcpsp.mzn  rcpsp.py
models/send-more-money/: send-more-money.py
models/shipping/: shipping.py
models/stable-marriage/: stable-marriage.py
models/stable-marriage-json/: params.json  stable-marriage-json.py
models/sudoku/: sudoku.py
models/wedding/: wedding.py
models/wedding2/: wedding2.py
models/xkcd/: xkcd.py
mors-frontend/: grabber.sh  meson.build
mors-frontend/main/: lib.cpp  lib.hpp
mors-parser/: CMakeLists.txt  ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  lib.cpp  lib.hpp  parser_opts.cpp  parser_opts.hpp  parsing_errors.cpp  parsing_errors.hpp  transformer.cpp  transformer.hpp  utils.cpp  utils.hpp
mors_lib/: __init__.py
share/minizinc/: Preferences.json
